--- a/Spearhead.html
+++ b/Spearhead.html
@@ -24,9 +24,9 @@
             </div>
                 <li><a href="index.html#connects">Home</a></li>
                 <li><a href="#aboutus">About Us</a></li>
-                <li><a href="#sermons">Cell Leaders</a></li>
+                <li><a href="#leads">Cell Leaders</a></li>
                 <li><a href="#blogss">Blogs</a></li>
-                <li><a href="PrayerRequest.html">Subscribe</a></li>
+                <li><a href="#subs1">Subscribe</a></li>
                 <li><a href="Announcement.html">Announcements</a></li>
         </ul>
         <div class="icon menu-btn">
@@ -40,6 +40,8 @@
     <p id="noice">Connects</p>
     <h1>Spearhead</h1>
   </div>
+
+<section id="aboutus">
 
   <div class="container">
     <h1>"Working season is not an obligation but a fulfilment of our life mission"</h1>
@@ -65,6 +67,9 @@
 
   </div>
 
+</section>
+
+<section id="leads">
   <div class="leaders">
     <h1>Meet your Cell Leaders</h1>
   </div>
@@ -83,6 +88,7 @@
       <h1>Bro. Spike Yellow</h1>
     </div>
   </div>
+</section>
 
 <section id="blogss">
   <div class="blogs">
@@ -147,6 +153,8 @@
   </div>
 </section>
 
+<section id="subs1">
+
   <div class="subs">
     <img src="SundaySchooltings/Subs.jpg" alt="">
     <div class="sText">
@@ -155,6 +163,10 @@
       <a href="Form.html"><button><span><h1>Click me </h1></span></button></a>
     </div>
   </div>
+  
+</section>
+
+
 
   <div class="bottomLinks">
 
